01-nginx-ingress/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    demo: nginx-ingress
