01-nginx-ingress/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service
  namespace: default
  labels:
    app: nginx-demo-app
    demo: nginx-ingress
spec:
  type: ClusterIP
  selector:
    app: nginx-demo-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
